src/main/java/parser/SimpleParser/SimpleParser.java
// Generated from C:/Users/annem/IdeaProjects/Master_Parser/src/main/java/parser\SimpleParser.g4 by ANTLR 4.9.1
package parser.SimpleParser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimpleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROC=1, RETURN=2, IF=3, ELSE=4, VAR=5, BOOL=6, WORD=7, FLOAT=8, NUMBER=9, 
		STRING=10, EQUAL=11, ARROW=12, ISEP=13, WHITESPACE=14, COLON=15, OPENCURLY=16, 
		CLOSECURLY=17, OPENPARA=18, CLOSEPARA=19, OPENSQUA=20, CLOSESQUA=21, COMMA=22, 
		PERIOD=23;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_prefix = 2, RULE_procReturn = 3, 
		RULE_procReturnValues = 4, RULE_definition = 5, RULE_variabledefinition = 6, 
		RULE_functiondefinition = 7, RULE_intParameters = 8, RULE_intParameter = 9, 
		RULE_c = 10, RULE_instruction = 11, RULE_initialization = 12, RULE_initialDeclara = 13, 
		RULE_declaration = 14, RULE_ifState = 15, RULE_returnState = 16, RULE_returnValue = 17, 
		RULE_returnOptions = 18, RULE_eList = 19, RULE_procInvoke = 20, RULE_invokeargs = 21, 
		RULE_argsvalues = 22, RULE_interaction = 23, RULE_statefulInteraction = 24, 
		RULE_variableInteraction = 25, RULE_selection = 26, RULE_e = 27, RULE_function = 28, 
		RULE_parameters = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "prefix", "procReturn", "procReturnValues", "definition", 
			"variabledefinition", "functiondefinition", "intParameters", "intParameter", 
			"c", "instruction", "initialization", "initialDeclara", "declaration", 
			"ifState", "returnState", "returnValue", "returnOptions", "eList", "procInvoke", 
			"invokeargs", "argsvalues", "interaction", "statefulInteraction", "variableInteraction", 
			"selection", "e", "function", "parameters"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "'='", 
			"'->'", null, "' '", "':'", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROC", "RETURN", "IF", "ELSE", "VAR", "BOOL", "WORD", "FLOAT", 
			"NUMBER", "STRING", "EQUAL", "ARROW", "ISEP", "WHITESPACE", "COLON", 
			"OPENCURLY", "CLOSECURLY", "OPENPARA", "CLOSEPARA", "OPENSQUA", "CLOSESQUA", 
			"COMMA", "PERIOD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimpleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimpleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SimpleParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			program();
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public Token procedure;
		public List<TerminalNode> OPENPARA() { return getTokens(SimpleParser.OPENPARA); }
		public TerminalNode OPENPARA(int i) {
			return getToken(SimpleParser.OPENPARA, i);
		}
		public List<TerminalNode> CLOSEPARA() { return getTokens(SimpleParser.CLOSEPARA); }
		public TerminalNode CLOSEPARA(int i) {
			return getToken(SimpleParser.CLOSEPARA, i);
		}
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public TerminalNode OPENCURLY() { return getToken(SimpleParser.OPENCURLY, 0); }
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public TerminalNode CLOSECURLY() { return getToken(SimpleParser.CLOSECURLY, 0); }
		public TerminalNode WORD() { return getToken(SimpleParser.WORD, 0); }
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public ProcReturnContext procReturn() {
			return getRuleContext(ProcReturnContext.class,0);
		}
		public List<TerminalNode> ISEP() { return getTokens(SimpleParser.ISEP); }
		public TerminalNode ISEP(int i) {
			return getToken(SimpleParser.ISEP, i);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				((ProgramContext)_localctx).procedure = match(WORD);
				setState(64);
				match(OPENPARA);
				setState(66);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(65);
					prefix();
					}
					break;
				}
				setState(68);
				match(CLOSEPARA);
				setState(69);
				match(COLON);
				setState(70);
				match(OPENPARA);
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(71);
					procReturn();
					}
					break;
				}
				setState(74);
				match(CLOSEPARA);
				setState(75);
				match(OPENCURLY);
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ISEP) {
					{
					setState(76);
					match(ISEP);
					}
				}

				setState(79);
				c();
				setState(80);
				match(CLOSECURLY);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ISEP) {
					{
					setState(81);
					match(ISEP);
					setState(82);
					program();
					}
				}

				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixContext extends ParserRuleContext {
		public Token process;
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public TerminalNode PROC() { return getToken(SimpleParser.PROC, 0); }
		public TerminalNode OPENPARA() { return getToken(SimpleParser.OPENPARA, 0); }
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public TerminalNode CLOSEPARA() { return getToken(SimpleParser.CLOSEPARA, 0); }
		public TerminalNode WORD() { return getToken(SimpleParser.WORD, 0); }
		public TerminalNode COMMA() { return getToken(SimpleParser.COMMA, 0); }
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public PrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitPrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitPrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixContext prefix() throws RecognitionException {
		PrefixContext _localctx = new PrefixContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prefix);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				((PrefixContext)_localctx).process = match(WORD);
				setState(89);
				match(COLON);
				setState(90);
				match(PROC);
				setState(91);
				match(OPENPARA);
				setState(92);
				definition();
				setState(93);
				match(CLOSEPARA);
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(94);
					match(COMMA);
					setState(95);
					prefix();
					}
				}

				}
				break;
			case CLOSEPARA:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcReturnContext extends ParserRuleContext {
		public Token process;
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public TerminalNode PROC() { return getToken(SimpleParser.PROC, 0); }
		public TerminalNode OPENPARA() { return getToken(SimpleParser.OPENPARA, 0); }
		public ProcReturnValuesContext procReturnValues() {
			return getRuleContext(ProcReturnValuesContext.class,0);
		}
		public TerminalNode CLOSEPARA() { return getToken(SimpleParser.CLOSEPARA, 0); }
		public TerminalNode WORD() { return getToken(SimpleParser.WORD, 0); }
		public TerminalNode COMMA() { return getToken(SimpleParser.COMMA, 0); }
		public ProcReturnContext procReturn() {
			return getRuleContext(ProcReturnContext.class,0);
		}
		public ProcReturnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procReturn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterProcReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitProcReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitProcReturn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcReturnContext procReturn() throws RecognitionException {
		ProcReturnContext _localctx = new ProcReturnContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procReturn);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				((ProcReturnContext)_localctx).process = match(WORD);
				setState(102);
				match(COLON);
				setState(103);
				match(PROC);
				setState(104);
				match(OPENPARA);
				setState(105);
				procReturnValues();
				setState(106);
				match(CLOSEPARA);
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(107);
					match(COMMA);
					setState(108);
					procReturn();
					}
				}

				}
				break;
			case CLOSEPARA:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcReturnValuesContext extends ParserRuleContext {
		public List<TerminalNode> WORD() { return getTokens(SimpleParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(SimpleParser.WORD, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SimpleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SimpleParser.COMMA, i);
		}
		public ProcReturnValuesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procReturnValues; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterProcReturnValues(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitProcReturnValues(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitProcReturnValues(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcReturnValuesContext procReturnValues() throws RecognitionException {
		ProcReturnValuesContext _localctx = new ProcReturnValuesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procReturnValues);
		int _la;
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				match(WORD);
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(115);
					match(COMMA);
					setState(116);
					match(WORD);
					}
					}
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case CLOSEPARA:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public FunctiondefinitionContext functiondefinition() {
			return getRuleContext(FunctiondefinitionContext.class,0);
		}
		public VariabledefinitionContext variabledefinition() {
			return getRuleContext(VariabledefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definition);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				functiondefinition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				variabledefinition();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariabledefinitionContext extends ParserRuleContext {
		public Token id;
		public Token type;
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public List<TerminalNode> WORD() { return getTokens(SimpleParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(SimpleParser.WORD, i);
		}
		public TerminalNode COMMA() { return getToken(SimpleParser.COMMA, 0); }
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public VariabledefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variabledefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterVariabledefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitVariabledefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitVariabledefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariabledefinitionContext variabledefinition() throws RecognitionException {
		VariabledefinitionContext _localctx = new VariabledefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variabledefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			((VariabledefinitionContext)_localctx).id = match(WORD);
			setState(131);
			match(COLON);
			setState(132);
			((VariabledefinitionContext)_localctx).type = match(WORD);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(133);
				match(COMMA);
				setState(134);
				definition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctiondefinitionContext extends ParserRuleContext {
		public Token id;
		public Token returnvalue;
		public TerminalNode COLON() { return getToken(SimpleParser.COLON, 0); }
		public TerminalNode OPENPARA() { return getToken(SimpleParser.OPENPARA, 0); }
		public IntParametersContext intParameters() {
			return getRuleContext(IntParametersContext.class,0);
		}
		public TerminalNode CLOSEPARA() { return getToken(SimpleParser.CLOSEPARA, 0); }
		public TerminalNode ARROW() { return getToken(SimpleParser.ARROW, 0); }
		public List<TerminalNode> WORD() { return getTokens(SimpleParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(SimpleParser.WORD, i);
		}
		public TerminalNode COMMA() { return getToken(SimpleParser.COMMA, 0); }
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public FunctiondefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functiondefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterFunctiondefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitFunctiondefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitFunctiondefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctiondefinitionContext functiondefinition() throws RecognitionException {
		FunctiondefinitionContext _localctx = new FunctiondefinitionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functiondefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			((FunctiondefinitionContext)_localctx).id = match(WORD);
			setState(138);
			match(COLON);
			setState(139);
			match(OPENPARA);
			setState(140);
			intParameters();
			setState(141);
			match(CLOSEPARA);
			setState(142);
			match(ARROW);
			setState(143);
			((FunctiondefinitionContext)_localctx).returnvalue = match(WORD);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(144);
				match(COMMA);
				setState(145);
				definition();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntParametersContext extends ParserRuleContext {
		public IntParameterContext intParameter() {
			return getRuleContext(IntParameterContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(SimpleParser.COMMA, 0); }
		public IntParametersContext intParameters() {
			return getRuleContext(IntParametersContext.class,0);
		}
		public IntParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterIntParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitIntParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitIntParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntParametersContext intParameters() throws RecognitionException {
		IntParametersContext _localctx = new IntParametersContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_intParameters);
		int _la;
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				intParameter();
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(149);
					match(COMMA);
					setState(150);
					intParameters();
					}
				}

				}
				break;
			case CLOSEPARA:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntParameterContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(SimpleParser.WORD, 0); }
		public IntParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterIntParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitIntParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitIntParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntParameterContext intParameter() throws RecognitionException {
		IntParameterContext _localctx = new IntParameterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_intParameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CContext extends ParserRuleContext {
		public InstructionContext instruction() {
			return getRuleContext(InstructionContext.class,0);
		}
		public TerminalNode ISEP() { return getToken(SimpleParser.ISEP, 0); }
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public CContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).enterC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SimpleParserListener ) ((SimpleParserListener)listener).exitC(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimpleParserVisitor ) return ((SimpleParserVisitor<? extends T>)visitor).visitC(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CContext c() throws RecognitionException {
		CContext _localctx = new CContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_c);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
			case IF:
			case VAR:
			case WORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(158);
				instruction();
				setState(161);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
				case 1:
					{
					setState(159);
					match(ISEP);
					setState(160);
					c();
					}
					break;
				}
				}
				break;
			case ISEP:
			case CLOSECURLY:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
